--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,9 @@
   <meta charset="utf-8">
   <title>Minesweeper</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--  <link rel="icon" type="image/x-icon" href="">-->
 </head>
-<body>
+<body style="background-color: lightgray">
   <app-root></app-root>
 </body>
 </html>
